ClipIt-1.4.2-20110906001 ~ 2011-09-06 15:01:40 +0300

+ Added: Added transifex config to repository.
+ Added: Added script for automatic translation updating.
+ Added: Added Bulgarian translation.
+ Fixed: Updated translations.


ClipIt-1.4.2-20110831002 - 2011-08-31 10:24:26 +0300

+ Added: Added commit script to git.


ClipIt-1.4.2-20110831001 - 2011-08-31 10:21:47 +0300

+ Fixed: Fixed remove bug when multiple items were selected in the list.


ClipIt-1.4.2-20110816003 - 2011-08-16 14:24:00 +0300

+ Added: Added some more strings to gettext.
+ Added: Added Estonian translation.


ClipIt-1.4.2-20110816002 - 2011-08-16 13:06:12 +0300

+ Fixed: Fixed bug where in some cases actions and excludes couldn't be
		added. (SF: #3315622) (Thanks to Guido Tabbernuk)


ClipIt-1.4.2-20110816001 - 2011-08-16 12:52:05 +0300

+ Added: Added logic to Makefile to automatically update translation files.
+ Fixed: Added some more strings to gettext and updated translations.


ClipIt-1.4.2-20110726001 - 2011-07-26 18:10:39 +0300

+ Fixed: Updated German localisation. (LP: #793878)
+ Fixed: Fixed problem with excludes and actions lists not working properly
		on Debian derived distributions. (SF: #3315622)


ClipIt-1.4.2-20110623001 - 2011-06-23 13:46:10 +0300

+ Fixed: Bumped version to 1.4.2.
+ Fixed: Changed layout of the ChangeLog file.


ClipIt-1.4.1-20110604001 - 2011-06-04 17:49:05 +0300

+ Fixed: Removed some more files from git.


ClipIt-1.4.1-20110527004 - 2011-05-27 10:29:37 +0300

+ Fixed: Typo in src/Makefile.am.


ClipIt-1.4.1-20110527003 - 2011-05-27 10:24:50 +0300

+ Fixed: Removed some files from git. Again.


ClipIt-1.4.1-20110527002 - 2011-05-27 09:59:35 +0300

+ Fixed: Made autogen.sh executable.


ClipIt-1.4.1-20110527001 - 2011-05-27 09:53:08 +0300

+ Fixed: Hidden righ-click menu option when indicator is active and
		disabled the static item spin when static items are not
		shown.


ClipIt-1.4.1-20110526008 - 2011-05-26 23:03:11 +0300
