@@ -1,4 +1,9 @@
-ClipIt-1.4.2-20110906001 ~ 2011-09-06 15:01:40 +0300
+ClipIt-1.4.2-20111015001 ~ 2011-10-15 12:29:14 +0300
+
++ Fixed: Fixed bug where wrong item was being selected for editing.
+
+
+ClipIt-1.4.2-20110906001 - 2011-09-06 15:03:00 +0300
 
 + Added: Added transifex config to repository.
 + Added: Added script for automatic translation updating.
